Move pages to views folder

--- a/FastCost.csproj
+++ b/FastCost.csproj
@@ -53,9 +53,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="CostPage.xaml">
+	  <MauiXaml Update="Views\CostPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Models\" />
 	</ItemGroup>
 
 </Project>
