--- a/FastCost.csproj
+++ b/FastCost.csproj
@@ -53,6 +53,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\AllCostsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\CostPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
