--- a/FastCost.csproj
+++ b/FastCost.csproj
@@ -36,7 +36,7 @@
 
 		<!-- Splash Screen -->
 		<!-- <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="White" BaseSize="128,128" /> -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="White" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="CadetBlue" BaseSize="128,128" />
 
 		<!-- Images -->
 		<!-- <MauiImage Include="Resources\Images\*" /> -->
