--- a/FastCost.csproj
+++ b/FastCost.csproj
@@ -32,11 +32,11 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\iconscost.png" />
+		<MauiIcon Include="Resources\AppIcon\iconscost.png" Color="CadetBlue" />
 
 		<!-- Splash Screen -->
 		<!-- <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="White" BaseSize="128,128" /> -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="CadetBlue" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="CadetBlue" BaseSize="128,128" /> <!-- .net - white text-->
 
 		<!-- Images -->
 		<!-- <MauiImage Include="Resources\Images\*" /> -->
