--- a/FastCost.csproj
+++ b/FastCost.csproj
@@ -39,7 +39,7 @@
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="CadetBlue" BaseSize="128,128" /> <!-- .net - white text-->
 
 		<!-- Images -->
-		<!-- <MauiImage Include="Resources\Images\*" /> -->
+		<MauiImage Include="Resources\Images\*" />
 		<!-- <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" /> -->
 
 		<!-- Custom Fonts -->
