add AnalysisPage tab

--- a/FastCost.csproj
+++ b/FastCost.csproj
@@ -60,6 +60,9 @@
 	  <MauiXaml Update="Views\AllCostsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\AnalysisPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\CostPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
