add tests for AllCostsService, close #84

--- a/FastCost.csproj
+++ b/FastCost.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net9.0-android</TargetFrameworks>
-    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>FastCost</RootNamespace>
+	<TargetFrameworks>net9.0;net9.0-android</TargetFrameworks>
+	<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
+	<OutputType Condition="'$(TargetFramework)' != 'net9.0'">Exe</OutputType>
+	<RootNamespace>FastCost</RootNamespace>
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -12,12 +12,12 @@
     <!-- App Identifier -->
     <ApplicationId>com.companyname.fastcost</ApplicationId>
     <!-- Versions -->
-    <ApplicationDisplayVersion>1.0.5</ApplicationDisplayVersion>
-    <ApplicationVersion>4</ApplicationVersion>
+	  <ApplicationVersion>4</ApplicationVersion>
+	  <!--<ApplicationDisplayVersion>1.0.5</ApplicationDisplayVersion>-->
+	  <!--<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>--> <!-- bug workaround, comment out or use 1.0 for xunit testing -->
 	<DefaultLanguage>en</DefaultLanguage>
 	<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
     <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.19041.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
     <!-- App Icon -->
